# sh2-anim-converter

./: Cargo.toml  README.md  schema.toml
src/: animation.rs  convert.rs  lib.rs  main.rs  schema.rs  skeleton.rs
